# quadruped-gait

./: Cargo.toml  README.md
.github/workflows/: ci.yml
legged-estimation/: Cargo.toml
legged-estimation/src/: attitude_estimator.rs  leg_odometry.rs  lib.rs  linear_kalman.rs
policy-runtime/: Cargo.toml  README.md
policy-runtime/src/: lib.rs
quadruped-gait/: Cargo.toml
quadruped-gait/src/: async_solver.rs  autodetect.rs  body_state.rs  centroidal_controller.rs  centroidal_mpc.rs  config.rs  controller.rs  exp.rs  footstep.rs  full_centroidal_controller.rs  full_centroidal_mpc.rs  generator.rs  ik.rs  lib.rs  linear_crawl.rs  mpc_controller.rs  mpc_reference.rs  phase.rs  srbd_mpc.rs  swing_traj.rs  viz.rs  viz_sub.rs
quadruped-gait/src/wbc/: dims.rs  ho_qp.rs  mod.rs  solver.rs  task.rs  wbc.rs
quadruped-gait/src/wbc/tasks/: base_accel.rs  contact_force.rs  floating_base_eom.rs  friction_cone.rs  mod.rs  no_contact_motion.rs  swing_leg.rs  tau_gravity.rs  torque_limits.rs
quadruped-gait/tests/: cycle_dump.rs
